integrated table of matches in csv and notebook

--- a/CODE/merge_data.ipynb
+++ b/CODE/merge_data.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
+    "import string\n",
+    "import re\n",
+    "import math\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +94,7 @@
        "4       2558   The Butterfly Effect        123   The Butterfly Effect"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,12 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_title(title1, title2):\n",
     "    #take the longer title\n",
+    "    title1= title1.item()\n",
+    "    title2=title2.item()\n",
     "    l1 = len(title1)\n",
     "    l2= len(title2)\n",
     "    res = title1 if l1>l2 else title2\n",
@@ -123,46 +128,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_year(year1, year2):\n",
     "    #if value form B exists, take it else from A\n",
-    "    if year2 != \"-1\":\n",
-    "        return year2\n",
-    "    return year1"
+    "    if year2.item() != -1:\n",
+    "        return year2.item()\n",
+    "    return year1.item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_mpaa(mpaa1,mpaa2):\n",
+    "    mpaa1=mpaa1.item()\n",
+    "    mpaa2=mpaa2.item()\n",
     "    return mpaa1 if mpaa1 != \"Not Rated\" and mpaa1 != \"-1\" else mpaa2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_runtime(rt1,rt2):\n",
+    "    rt1=rt1.item()\n",
+    "    rt2=rt2.item()\n",
     "    regex = re.compile('[^0-9]')\n",
-    "    rt1 = regex.sub('',rt1)\n",
-    "    rt2 = regex.sub('',rt2)\n",
-    "    rt1 = int(rt1)\n",
-    "    rt2 = int(rt2)\n",
+    "    a=regex.sub('',rt1)\n",
+    "    b=regex.sub('',rt2)\n",
+    "    rt1 = int(a)\n",
+    "    rt2 = int(b)\n",
     "    rt = rt1 if rt1>rt2 else rt2\n",
     "    return str(rt)+\" min\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,16 +182,19 @@
     "    g2= g2.split(\",\")\n",
     "    final_list = g1+g2\n",
     "    final_list = set(final_list)\n",
-    "    return final_list.join(\",\")"
+    "    \n",
+    "    return ','.join(final_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_genres(g1,g2):\n",
+    "    g1=g1.item()\n",
+    "    g2=g2.item()\n",
     "    if g1==\"-1\": return g2\n",
     "    if g2==\"-1\": return g1\n",
     "    return split_and_union(g1,g2)\n",
@@ -191,11 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_director_name(dir1,dir2):\n",
+    "    dir1=dir1.item()\n",
+    "    dir2=dir2.item()\n",
     "    if dir1==\"-1\": return dir2\n",
     "    if dir2==\"-1\": return dir1\n",
     "    return split_and_union(dir1,dir2)"
@@ -203,11 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_stars(stars1, stars2):\n",
+    "    stars1=stars1.item()\n",
+    "    stars2=stars2.item()\n",
     "    if stars1==\"-1\": return stars2\n",
     "    if stars2==\"-1\": return stars1\n",
     "    return split_and_union(stars1,stars2)"
@@ -215,13 +231,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_gross():\n",
+    "def merge_gross(grossL, grossR):\n",
+    "    grossL=grossL.item()\n",
+    "    grossR=grossR.item()\n",
+    "    #remove the '$' or any other special character from gross value of right table-\n",
+    "    #is of the form \"$1234,123\"\n",
+    "    if grossR == \"-1\" and grossL == \"-1\":\n",
+    "        return grossL\n",
+    "    grossRint=grossLint=0\n",
+    "    if grossR != \"-1\":\n",
+    "        grossclean2 = ''.join(ch for ch in grossR if ch in string.digits)\n",
+    "        grossRint = int(grossclean2)\n",
+    "    #grossL is of the form \"$4.4M\"\n",
+    "    if grossL != \"-1\":\n",
+    "        dictL={'M':1000000,'B':1000000000,'T':math.pow(10,12)}\n",
+    "        grossL.replace(\" \",\"\")\n",
+    "        if grossL[-1] in dictL:\n",
+    "               multfact=dictL[grossL[-1]]\n",
+    "        grossclean1 = ''.join(ch for ch in grossL if ch in string.digits)\n",
+    "        grossLint = float(grossclean1)\n",
+    "        grossLint *= multfact\n",
+    "    f = grossLint if grossLint>grossRint else grossRint\n",
+    "    return \"$\"+str(f)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine(lt,rt):\n",
+    "    \n",
+    "    a = merge_title(lt.title,rt.title)\n",
+    "    b = merge_year(lt.year,rt.year)\n",
+    "    c=merge_mpaa(lt.mpaa,rt.mpaa)\n",
+    "    d=merge_runtime(lt.runtime,rt.runtime)\n",
+    "    e=merge_genres(lt.genres,rt.genres)\n",
+    "    f=merge_director_name(lt.director,rt.director)\n",
+    "    g=merge_stars(lt.stars,rt.stars)\n",
+    "    h=merge_gross(lt.gross,rt.gross)\n",
+    "    return (lt.id.item(),a,b,c,d,e,f,g,h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pick each tuple from '../DATA/MatchPredctionsOnAllTuplePairs.csv' and take out corresponding\n",
+    "#tuples from A and B\n",
+    "finalist=[]\n",
+    "for row in Matches.itertuples():\n",
+    "    #print(row)\n",
+    "    lid = row.ltable_id\n",
+    "    rid = row.rtable_id\n",
+    "    ltup = A.loc[(A[\"id\"]==lid)]\n",
+    "    rtup = B.loc[(B[\"id\"]==rid)]\n",
+    "    tup = combine(ltup,rtup)\n",
+    "    finalist.append(tup)\n",
+    "df = pd.DataFrame(finalist, columns=['id', 'title', 'year', 'mpaa','runtime','genres','director','stars','gross'])\n",
+    "df.head() \n",
+    "df.to_csv('../DATA/integrated_table.csv', index=False)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
